Fixed font size issue on mobile versio

--- a/src/App.css
+++ b/src/App.css
@@ -60,7 +60,7 @@ body {
 .faq-item-three.open span {
   font-family: Kumbh Sans;
   font-weight: 700;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 100%;
   letter-spacing: 0px;
   color: #1e1f36;
